# livekit-flows

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
editor/: nuxt.config.ts  package.json  pnpm-lock.yaml
editor/app/: app.config.ts  app.vue
editor/app/components/: ActionEditModal.vue  ActionListItem.vue  CodeExportModal.vue  DataFieldEditModal.vue  DataFieldListItem.vue  EdgeProperties.vue  FlowCanvas.vue  FlowEdge.vue  FlowEditor.vue  FlowInspector.vue  FlowNode.vue  FlowProperties.vue  JsonSchemaEditor.vue  NodeProperties.vue  SpecialEdge.vue
editor/app/composables/: useExport.ts  useFlowConverters.ts  useFlowExport.ts  useFlows.ts  useSchemaConverter.ts  useSelection.ts  welcomeFlow.ts
editor/app/layouts/: default.vue
editor/app/pages/: index.vue
editor/app/templates/: workerTemplate.ts
editor/app/types/: flow.ts
editor/app/validation/: flow.ts
examples/: basic.py  basic_usage.py  cat_facts.py  cat_facts_flow.yaml  data_collection.py  data_collection_flow.yaml
livekit_flows/: __init__.py  agent.py  flow.py  loaders.py
livekit_flows/actions/: __init__.py  executor.py
livekit_flows/agent/: __init__.py  flow_agent.py  session.py  tools.py
livekit_flows/core/: __init__.py  enums.py  models.py
livekit_flows/templates/: __init__.py  renderer.py
livekit_flows/utils/: __init__.py  model_generator.py  schema_validator.py
tests/: conftest.py  test_actions.py  test_basic_flow.py  test_data_collection.py
